CMake: Fixed case where glew does not depend on other libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,7 +60,11 @@ if (GLFW)
     set(GLFW_INSTALL OFF CACHE BOOL "Build GLFW install" FORCE)
 
     add_subdirectory(${GLFW_PATH})
+    
     get_target_property(glfw_LibDeps glfw INTERFACE_LINK_LIBRARIES)
+    if (NOT glfw_LibDeps)
+        set (glfw_LibDeps "")
+    endif ()
 
     set ( GLFW_INCLUDE "${GLFW_PATH}/include")
     link_directories ("${CMAKE_BINARY_DIR}/src/deps/glfw-3.2.1/src/")
