--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.1)
 project(gltests)
 set (CMAKE_CXX_STANDARD 14)
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_subdirectory (src)
