Added first imgui menu which allows to show or hide individual panels.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set (sources
         shapes.cpp
         renderer.cpp
         view.cpp
+        visualization.cpp
     	window_event_listener.cpp
 
         geometry.cpp
