first rename refactoring (reduced folder depth by two)

--- a/java_binding_sample/build.gradle
+++ b/java_binding_sample/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 if (!hasProperty('mainClass')) {
-    ext.mainClass = 'eu.mihosoft.vrl.v3d.nativeogl.Main'
+    ext.mainClass = 'eu.mihosoft.vnativegl.Main'
 }
 
 
