added MeshAttachments and SubsetInfo specialization.
SubsetInfo objects are now created during ugx parsing. They can be
edited and visualized through ImGui.

No Subset-Rendering until now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ set (sources
     	camera.cpp
         file_util.cpp
         shapes.cpp
+        subset_info_attachment.cpp
         renderer.cpp
         view.cpp
         visualization.cpp
