--- a/src/slimesh/CMakeLists.txt
+++ b/src/slimesh/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.1)
 
 set (sources
         subset_info_annex.cpp
+        file_io.cpp
         grob.cpp
         mesh.cpp
         normals.cpp
