added separate 'slimesh_tests' executable to slimesh sources

--- a/src/slimesh/CMakeLists.txt
+++ b/src/slimesh/CMakeLists.txt
@@ -20,3 +20,7 @@ include_directories (deps)
 file(COPY "test_meshes" DESTINATION "${CMAKE_BINARY_DIR}")
 
 add_library (slimeshlib ${sources})
+
+add_executable (slimesh_tests tests_main.cpp)
+target_link_libraries(slimesh_tests slimeshlib)
+
