--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ add_definitions (-DUSE_GL_VERSION_MINOR=${GL_VERSION_MINOR})
 
 include_directories (${GLAD_PATH}/include)
 include_directories (deps/glm-0.9.8.5)
+include_directories (deps/lume/include)
 include_directories (deps)
 
 find_package(OpenGL REQUIRED)
